--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/framework": "^7.29",
         "laravel/passport": "^9.0",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "^2.5"
+        "laravel/ui": "^2.5",
+        "lcobucci/jwt": "^3.3.3"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
