--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "@ashwamegh/vue-link-preview": "^0.2.5",
         "vue-axios": "^3.3.7",
         "vue-router": "^3.5.2",
         "vue-sweetalert2": "^5.0.2",
